--- a/boards/shields/torabo_tsuki_lp/torabo_tsuki_lp.dtsi
+++ b/boards/shields/torabo_tsuki_lp/torabo_tsuki_lp.dtsi
@@ -87,11 +87,6 @@
         compatible = "zmk,cdc-acm-bootloader-trigger";
     };
 
-    trackball_listener: trackball_listener {
-        compatible = "zmk,input-listener";
-        device = <&trackball>;
-    };
-
     vbatt: vbatt {
         // Disable default battery monitoring
         status = "disabled";
@@ -140,22 +135,29 @@
             low-power-enable;
         };
     };
+
+    i2c0_default: i2c0_default {
+        group1 {
+            psels = <NRF_PSEL(TWIM_SDA, 0, 18)>,
+                    <NRF_PSEL(TWIM_SCL, 0, 16)>;
+            bias-pull-up;
+        };
+    };
+
+    i2c0_sleep: i2c0_sleep {
+        group1 {
+            psels = <NRF_PSEL(TWIM_SDA, 0, 18)>,
+                    <NRF_PSEL(TWIM_SCL, 0, 16)>;
+            bias-pull-up;
+            low-power-enable;
+        };
+    };
 };
 
 &spi0 {
-    status = "okay";
-    compatible = "nordic,nrf-spim";
-    pinctrl-0 = <&spi0_default>;
-    pinctrl-1 = <&spi0_sleep>;
-    pinctrl-names = "default", "sleep";
-    cs-gpios = <&gpio0 20 GPIO_ACTIVE_LOW>;
+    status = "disabled";
+};
 
-    trackball: trackball@0 {
-        status = "okay";
-        compatible = "pixart,paw3222";
-        reg = <0>;
-        spi-max-frequency = <2000000>;
-        irq-gpios = <&gpio0 19 GPIO_ACTIVE_LOW>;
-        power-gpios = <&gpio0 8 (GPIO_ACTIVE_HIGH | NRF_GPIO_DRIVE_H1)>;
-    };
+&i2c0 {
+    status = "disabled";
 };
